# simple-http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
server/: main.cpp  server.cpp  server.h  server.sln  server.vcxproj  server.vcxproj.filters
